# mucap

./: .gitignore  Cargo.toml  README.md  flake.nix
clipboard_test/: Cargo.toml
clipboard_test/src/: main.rs
distrib/: .fpm  Dockerfile  build-docker.sh  debian-testing.Dockerfile  pkg-deb.sh
mucap/: Cargo.toml
mucap/src/: config.rs  lib.rs  main.rs  midistore.rs  note_generator.rs
mucap/src/ui/: miditransfer.rs  mod.rs  noteview.rs  style.rs  zoom_control.rs
xtask/: Cargo.toml
