[package]
name = "mucap"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", branch = "master", features = ["assert_process_allocs", "standalone"] }
nih_plug_vizia = { git = "https://github.com/robbert-vdh/nih-plug.git", branch = "master" }
arboard = "3.6.1"
midly = "0.5.3"
anyhow = "1.0.100"
rand = "0.9.2"
rand_distr = "0.5.1"
tempfile = "3.23.0"

[package.metadata.deb]
author = "polygon"
maintainer = "polygon"
section = "sound"
depends = "$auto"
assets = [
    ["target/release/mucap", "usr/bin/mucap", "755"],
    ["target/release/mucap.vst3/Contents/x86_64-linux/mucap.so", "usr/lib/vst3/mucap.vst3/Contents/x86_64-linux/mucap.so", "755"],
    ["target/release/mucap.clap", "usr/lib/clap/mucap.clap", "755"],
]